# cstris

./: CMakeLists.txt
extras/rlib/: main.cpp
libs/cstris/: board.cpp  board.hpp  dropper.cpp  dropper.hpp  game.cpp  game.hpp  tetrimino.cpp  tetrimino.hpp
libs/cythe/: cythe.cpp  cythe.hpp
src/: board.cpp  board.hpp  dropper.cpp  dropper.hpp  game.cpp  game.hpp  main.cpp  tetrimino.cpp  tetrimino.hpp
